--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,4 +28,5 @@
   {% if page.title contains 'Videos' %}
   <link href="{{ "/css/bootstrap.css" | prepend: site.baseurl }}" rel="stylesheet"/>
   {% endif %}
+  {% include analytics.html %}
 </head>
